--- a/src/features/footer/Footer.module.scss
+++ b/src/features/footer/Footer.module.scss
@@ -11,15 +11,15 @@
         color: $footerColor;
         .infoBlock{
             width: 400px;
-            margin-bottom: 0.2em;
-            padding: 2em;
-            border-radius: 0.3em;
+            margin-bottom: 2px;
+            padding: 20px;
+            border-radius: 5px;
             background-color: lighten($generalBackgroundColor, 50%);
 
             .infoRow {
                
                 display: flex;
-                padding: 0.5em 0;
+                padding: 7px 0;
 
                 @include max-bp('mini') {
 
@@ -38,7 +38,7 @@
             @include max-bp('mini') {
 
                 width: 250px;
-                padding: 1em;
+                padding: 10px;
             }
         }
        
@@ -46,7 +46,7 @@
 
             @include templatePageContainer(row);
             padding-top: 0;
-            border-radius: 0.3em;
+            border-radius: 5px;
             background-color: lighten($generalBackgroundColor, 50%);;
 
              @include max-bp('mini') {
@@ -54,7 +54,7 @@
              }
             .link {
                
-                margin: 0.2em;
+                margin: 5px;
                
 
                 & img{
