started to change Skill Component

--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -137,3 +137,7 @@
 @mixin mainBackgroundAnime($x, $y) {
   transform: translate($x, $y)
 };
+
+@mixin skillMove($x, $y) {
+  transform: translate($x, $y)
+}
