--- a/src/features/main/Main.module.scss
+++ b/src/features/main/Main.module.scss
@@ -50,7 +50,7 @@
     background-size: cover;
     opacity: 0.1;
 
-    animation: backgroundEffect 60s ease-in-out 0s infinite;
+    animation: backgroundEffect 60s ease-in-out 0s infinite alternate;
   }
 }
 
